Adds navigation section with class "navigation"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
       <header class="page-header">
+        <nav class="navigation">
 
+        </nav>
       </header>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
