Adds unordered list with class "navigation-list"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
       <header class="page-header">
         <nav class="navigation">
+          <ul class="navigation-list">
 
+          </ul>
         </nav>
       </header>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
