--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
       <header class="page-header">
         <nav class="navigation">
           <ul class="navigation-list">
-
+            <li class="navigation-item">
+              <a class="navigation-link" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="hotels.html">Гостиницы</a>
+            </li>
           </ul>
         </nav>
       </header>
