Adds user navigation list with buttons.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
               <a class="navigation-link" href="hotels.html">Гостиницы</a>
             </li>
           </ul>
+          <ul class="navigation-list user-navigation">
+            <li class="navigation-item">
+              <button class="navigation-button" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </button>
+            </li>
+            <li class="navigation-item">
+              <button class="navigation-button" href="#">
+                <span class="visually-hidden">Нравится посетителям</span>
+              </button>
+            </li>
+            <li class="navigation-item">
+              <button class="navigation-button" href="#">
+                <span>Хочу сюда</span>
+              </button>
+            </li>
+          </ul>
         </nav>
       </header>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
