--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
           </ul>
         </nav>
       </header>
+
+      <main class="main-index">
+
+      </main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
