--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
 
       <main class="main-index">
-
+        <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
       </main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
