--- a/index.html
+++ b/index.html
@@ -42,10 +42,60 @@
         <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <section class="visit-reasons">
-
+          <ol class="visit-reasons-list">
+            <li class="visit-reason-list-item">
+              <div class="wrap">
+                <h2>Настоящий городок</h2>
+                <p>— №1 —</p>
+                <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <div class="wrap">
+                <img src="" alt="Улицы городка Седона">
+              </div>
+              <ul>
+                <li>
+                  <h3>Жильё</h3>
+                  <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                </li>
+                <li>
+                  <h3>Еда</h3>
+                  <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li>
+                  <h3>Сувениры</h3>
+                  <p>Не только китайского, но и настоящего местного производства!</p>
+                </li>
+              </ul>
+            </li>
+            <li class="visit-reason-list-item">
+              <div class="wrap">
+                <img src="" alt="Скала Мост Дьявола">
+              </div>
+              <div class="wrap">
+                <h2>Там есть мост дьявола</h2>
+                <p>— №2 —</p>
+                <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            </li>
+            <li class="visit-reason-list-item">
+              <h2>Небольшая площадь</h2>
+              <p>— №3 —</p>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="visit-reason-list-item">
+              <h2>Красивая дорога</h2>
+              <p>— №4 —</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="visit-reason-list-item">
+              <h2>Мало туристов</h2>
+              <p>— №5 —</p>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ol>
         </section>
       </main>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
+    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
   </body>
 </html>
