Adds section with class "hotel-selection" where user can select the hotel.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
             </li>
           </ol>
         </section>
+
+        <section class="hotel-selection">
+
+        </section>
       </main>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
