--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
         </section>
 
         <section class="hotel-selection">
-
+          <p>Заинтересовались?</p>
+          <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p>
+            <button>Поиск гостиницы в Седоне</button>
+          </p>
         </section>
       </main>
 
