Adds section with class "subscription" for subscription.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             <button>Поиск гостиницы в Седоне</button>
           </p>
         </section>
+
+        <section class="subscription">
+
+        </section>
       </main>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
