--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
         </section>
 
         <section class="subscription">
-
+          <p>Подпишитесь на рассылку</p>
+          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="field" type="email" name="subscription-email" id="subscription-email" placeholder="email@example.com" >
+            <button class="button subscription-button" type="submit">Подписаться</button>
+          </form>
         </section>
       </main>
 
