Adds footer with class "page-footer" to web page.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
         </section>
       </main>
 
+      <footer class="page-footer">
+
+      </footer>
+
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
   </body>
 </html>
