Adds contact phone.

--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
             </li>
           </ul>
         </section>
+
+        <p class="contact-phone">+7 (812) 812-12-12</p>
+
+
         <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
       </footer>
 
