Adds block with creator information and link to his website.

--- a/index.html
+++ b/index.html
@@ -136,9 +136,12 @@
 
         <p class="contact-phone">+7 (812) 812-12-12</p>
 
-
-        <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+        <p class="creator-info">
+          <a href="https://htmlacademy.ru/" title="Перейти на сайт htmlacademy.ru">
+            <img src="#" alt="Логотип HTMLAcademy">
+          </a>
+        </p>
+        <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p> -->
       </footer>
-
   </body>
 </html>
