Adds some corrections on the page.
- correct class names
- correct attribute values
- adds two strong elements

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <section class="visit-reasons">
-          <ol class="visit-reasons-list">
-            <li class="visit-reason-list-item">
-              <div class="wrap">
+          <ol class="reasons-list">
+            <li class="reasons-list-item">
+              <div class="wrapper">
                 <h2>Настоящий городок</h2>
                 <p>— №1 —</p>
                 <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <div class="wrap">
-                <img src="" alt="Улицы городка Седона">
+              <div class="wrapper">
+                <img src="" alt="Фотография улицы городка Седона">
               </div>
               <ul>
                 <li>
@@ -67,27 +67,27 @@
                 </li>
               </ul>
             </li>
-            <li class="visit-reason-list-item">
-              <div class="wrap">
-                <img src="" alt="Скала Мост Дьявола">
+            <li class="reasons-list-item">
+              <div class="wrapper">
+                <img src="" alt="Фотография скалы Мост Дьявола">
               </div>
-              <div class="wrap">
+              <div class="wrapper">
                 <h2>Там есть мост дьявола</h2>
                 <p>— №2 —</p>
                 <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             </li>
-            <li class="visit-reason-list-item">
+            <li class="reasons-list-item">
               <h2>Небольшая площадь</h2>
               <p>— №3 —</p>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="visit-reason-list-item">
+            <li class="reasons-list-item">
               <h2>Красивая дорога</h2>
               <p>— №4 —</p>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="visit-reason-list-item">
+            <li class="reasons-list-item">
               <h2>Мало туристов</h2>
               <p>— №5 —</p>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -96,7 +96,7 @@
         </section>
 
         <section class="hotel-selection">
-          <p>Заинтересовались?</p>
+          <p><strong>Заинтересовались?</strong></p>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <p>
             <button>Поиск гостиницы в Седоне</button>
@@ -104,7 +104,7 @@
         </section>
 
         <section class="subscription">
-          <p>Подпишитесь на рассылку</p>
+          <p><strong>Подпишитесь на рассылку</strong></p>
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="field" type="email" name="subscription-email" id="subscription-email" placeholder="email@example.com" >
