--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <header class="page-header">
+        <img src="" alt="Лотип Седоны">
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
