--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           </ul>
           <ul class="navigation-list user-navigation">
             <li class="navigation-item">
-              <button class="navigation-button" href="#">
+              <a class="navigation-link" href="#">
                 <span class="visually-hidden">Поиск</span>
-              </button>
+              </a>
             </li>
             <li class="navigation-item">
               <button class="navigation-button" href="#">
