--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li class="navigation-item">
               <button class="navigation-button" href="#">
-                <span>Хочу сюда</span>
+                Хочу сюда
               </button>
             </li>
           </ul>
