Also changes button element to a element.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
               </button>
             </li>
             <li class="navigation-item">
-              <button class="navigation-button" href="#">
+              <a class="navigation-link" href="#">
                 Хочу сюда
-              </button>
+              </a>
             </li>
           </ul>
         </nav>
