--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
               </a>
             </li>
             <li class="navigation-item">
-              <button class="navigation-button" href="#">
+              <a class="navigation-link" href="#">
                 <span class="visually-hidden">Нравится посетителям</span>
-              </button>
+                <span class="like-counter">12</span>
+              </a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">
