--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
       </header>
 
       <main class="main-index">
-        <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <section class="banner">
+          <h1 class="visually-hidden">Седона</h1>
+          <img src="" alt="Добро пожаловать">
+          <img src="" alt="в великолепную">
+          <img src="" alt="Седону">
+        </section>
+        <section class="intro">
+          <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        </section>
         <section class="visit-reasons">
           <ol class="reasons-list">
             <li class="reasons-list-item">
