Replaces symbols to character entities.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li class="reasons-list-item">
               <div class="wrapper">
                 <h2>Настоящий городок</h2>
-                <p>— №1 —</p>
+                <p>&boxh; &numero;1 &boxh;</p>
                 <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <div class="wrapper">
@@ -83,23 +83,23 @@
               </div>
               <div class="wrapper">
                 <h2>Там есть мост дьявола</h2>
-                <p>— №2 —</p>
+                <p>&boxh; &numero;2 &boxh;</p>
                 <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             </li>
             <li class="reasons-list-item">
               <h2>Небольшая площадь</h2>
-              <p>— №3 —</p>
+              <p>&boxh; &numero;3 &boxh;</p>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
             <li class="reasons-list-item">
               <h2>Красивая дорога</h2>
-              <p>— №4 —</p>
+              <p>&boxh; &numero;4 &boxh;</p>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="reasons-list-item">
               <h2>Мало туристов</h2>
-              <p>— №5 —</p>
+              <p>&boxh; &numero;5 &boxh;</p>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ol>
