--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
               </div>
               <ul>
                 <li>
-                  <h3>Жильё</h3>
+                  <b>Жильё</b>
                   <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                 </li>
                 <li>
-                  <h3>Еда</h3>
+                  <b>Еда</b>
                   <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li>
-                  <h3>Сувениры</h3>
+                  <b>Сувениры</b>
                   <p>Не только китайского, но и настоящего местного производства!</p>
                 </li>
               </ul>
