--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
 
         <section class="hotel-selection">
-          <p><strong>Заинтересовались?</strong></p>
+          <b>Заинтересовались?</b>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <p>
             <button>Поиск гостиницы в Седоне</button>
