Delete p element and replaces button element to a element.

--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
         <section class="hotel-selection">
           <b>Заинтересовались?</b>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <p>
-            <button>Поиск гостиницы в Седоне</button>
-          </p>
+          <a class="" href="#">Поиск гостиницы в Седоне</a>
         </section>
 
         <section class="subscription">
