--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
         </section>
 
         <section class="hotel-selection">
-          <b>Заинтересовались?</b>
+          <h2><a class="" href="#">Поиск гостиницы в Седоне</a></h2>
+          <p>Заинтересовались?</p>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="" href="#">Поиск гостиницы в Седоне</a>
         </section>
 
         <section class="subscription">
-          <p><strong>Подпишитесь на рассылку</strong></p>
+          <h2 class="visually-hidden">Почтовая рассылка</h2>
+          <p>Подпишитесь на рассылку</p>
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="field" type="email" name="subscription-email" id="subscription-email" placeholder="email@example.com" >
