Replaces p element to a element with correct tel link.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </ul>
         </section>
 
-        <p class="contact-phone">+7 (812) 812-12-12</p>
+        <a class="contact-phone" href="tel: +78128121212">+7 (812) 812-12-12</a>
 
         <p class="creator-info">
           <a href="https://htmlacademy.ru/" title="Перейти на сайт htmlacademy.ru">
