--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
       <main class="main-index">
         <section class="banner">
           <h1 class="visually-hidden">Седона</h1>
-          <img src="" alt="Добро пожаловать">
-          <img src="" alt="в великолепную">
-          <img src="" alt="Седону">
+          <img src="" alt="Добро пожаловать в великолепную Седону">
         </section>
         <section class="intro">
           <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
