--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
         </section>
 
         <section class="hotel-selection">
-          <h2><a class="" href="#">Поиск гостиницы в Седоне</a></h2>
+          <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
           <p>Заинтересовались?</p>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="search-link" href="#">Поиск гостиницы в Седоне</a>
         </section>
 
         <section class="subscription">
