--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,57 @@
       </nav>
     </header>
     <main class="main-catalog">
-
+      <section class="hotel-search">
+        <h1>Гостиницы Седоны</h1>
+        <nav class="navigation bread-crumbs">
+          <ul class="navigation-list">
+            <li class="navigation-list-item home-icon"><span class="visually-hidden">Главная</span></li>
+            <li class="navigation-list-item">Гостиницы</li>
+          </ul>
+          <form action="https://echo.htmlacademy.ru/" method="get">
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Инфраструктура:</legend>
+              <label class="control">
+                <input class="control-input" type="checkbox" name="swimming" checked>
+                Бассейн
+              </label>
+              <label class="control">
+                <input class="control-input" type="checkbox" name="parking" checked>
+                Парковка
+              </label>
+              <label class="control" lang="en">
+                <input class="control-input" type="checkbox" name="wi-fi">
+                Wi-Fi
+              </label>
+            </fieldset>
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Тип жилья:</legend>
+              <label class="control">
+                <input class="control-input" type="radio" name="accommodation" value="hotel" checked>
+                Гостиница
+              </label>
+              <label class="control">
+                <input class="control-input" type="radio" name="accommodation" value="motel">
+                Мотель
+              </label>
+              <label class="control" lang="en">
+                <input class="control-input" type="radio" name="accommodation" value="apartments">
+                Апартаменты
+              </label>
+            </fieldset>
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+              <input type="text" name="price-bottom">
+              <input type="text" name="price-top">
+              <input type="range" name="price-range">
+            </fieldset>
+            <section class="conrol-buttons">
+              <button class="button button-submit" type="submit">Применить</button>
+              <button class="button button-reset" type="reset">Сбросить</button>
+            </section>
+          </form>
+        </nav>
+      </section>
     </main>
   </body>
 </html>
