--- a/catalog.html
+++ b/catalog.html
@@ -41,8 +41,9 @@
         </ul>
       </nav>
     </header>
+
     <main class="main-catalog">
-      <section class="hotel-search-control">
+      <section class="search-settings">
         <h1>Гостиницы Седоны</h1>
         <nav class="navigation bread-crumbs">
           <ul class="navigation-list">
@@ -93,28 +94,136 @@
           </form>
         </nav>
       </section>
-      <section class="display-control-panel">
-        <h2 class="visually-hidden">Настройки отображения результатов поиска</h2>
-        <p>Найдено гостиниц: <span>38</span></p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
-          <select name="search-filter">
-            <option value="low-cost">Сначала дешёвые</option>
-            <option value="expensive">Сначала дорогие</option>
-            <option value="popular">Сначала популярные</option>
-          </select>
+      <section class="search-result">
+        <h2 class="visually-hidden">Результаты поиска</h2>
+        <div class="result-control-top">
+          <p>Найдено гостиниц: 38</p>
+          <form action="https://echo.htmlacademy.ru/" method="post">
+            <select name="search-filter">
+              <option value="low-cost">Сначала дешёвые</option>
+              <option value="expensive">Сначала дорогие</option>
+              <option value="popular">Сначала популярные</option>
+            </select>
+          </form>
+          <ul class="display-mode-list">
+            <li class="mode-list-item">
+              <a class="button button-tile button-active"><span class="visually-hidden">Показать плитку</span></a>
+            </li>
+            <li class="mode-list-item">
+              <a class="button button-slideshow"><span class="visually-hidden">Показать слайдшоу</span></a>
+            </li>
+            <li class="mode-list-item">
+              <a class="button button-list"><span class="visually-hidden">Показать список</span></a>
+            </li>
+          </ul>
+        </div>
+        <ul class="hotel-list">
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="" alt="">
+            </a>
+            <h3 class="product-card-title">Amara Resort & Spa</h3>
+            <span>Гостиница</span>
+            <span>От 4000 ₽</span>
+            <a class="button button-details" href="#">Подробнее</a>
+            <button class="button button-favourites">В избранное</button>
+            <span class="stars"></span>
+            <span class="rating">Рейтинг: 8,5</span>
+          </li>
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="" alt="">
+            </a>
+            <h3 class="product-card-title">Desert Quail Inn</h3>
+            <span>Гостиница</span>
+            <span>От 3000 ₽</span>
+            <a class="button button-details" href="#">Подробнее</a>
+            <button class="button button-favourites">В избранное</button>
+            <span class="stars"></span>
+            <span class="rating">Рейтинг: 8,9</span>
+          </li>
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="" alt="">
+            </a>
+            <h3 class="product-card-title">Villas at Poco Diablo</h3>
+            <span>Гостиница</span>
+            <span>От 2000 ₽</span>
+            <a class="button button-details" href="#">Подробнее</a>
+            <button class="button button-favourites">В избранном</button>
+            <span class="stars"></span>
+            <span class="rating">Рейтинг: 9,2</span>
+          </li>
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="" alt="">
+            </a>
+            <h3 class="product-card-title">GreenTree Inn</h3>
+            <span>Гостиница</span>
+            <span>От 3000 ₽</span>
+            <a class="button button-details" href="#">Подробнее</a>
+            <button class="button button-favourites">В избранное</button>
+            <span class="stars"></span>
+            <span class="rating">Рейтинг: 9,2</span>
+          </li>
+        </ul>
+        <div class="result-control-bottom">
+          <ul class="pagination">
+            <li class="pagination-item">1</li>
+            <li class="pagination-item">2</li>
+            <li class="pagination-item">3</li>
+            <li class="pagination-item">4</li>
+            <li class="pagination-item">...</li>
+            <li class="pagination-item">10</li>
+          </ul>
+          <form action="https://echo.htmlacademy.ru/" method="post">
+            <label>
+              Гостиниц на странице:
+              <select name="page-number">
+                <option value="4">4</option>
+              </select>
+            </label>
+          </form>
+        </div>
+      </section>
+      <section class="subscription">
+        <h2 class="visually-hidden">Почтовая рассылка</h2>
+        <p>Подпишитесь на рассылку</p>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input class="field" type="email" name="subscription-email" id="subscription-email" placeholder="email@example.com" >
+          <button class="button subscription-button" type="submit">Подписаться</button>
         </form>
-        <ul class="display-mode-list">
-          <li class="mode-list-item">
-            <a class="button button-tile button-active"><span class="visually-hidden">Показать плитку</span></a>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <section class="footer-social">
+        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden" lang="en">Twitter</span>
+            </a>
           </li>
-          <li class="mode-list-item">
-            <a class="button button-slideshow"><span class="visually-hidden">Показать слайдшоу</span></a>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden" lang="en">Facebook</span>
+            </a>
           </li>
-          <li class="mode-list-item">
-            <a class="button button-list"><span class="visually-hidden">Показать список</span></a>
+          <li class="footer-social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden" lang="en">Youtube</span>
+            </a>
           </li>
         </ul>
       </section>
-    </main>
+
+      <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+
+      <a href="https://htmlacademy.ru/" title="Перейти на сайт htmlacademy.ru">
+          <img src="#" alt="Логотип HTMLAcademy">
+      </a>
+    </footer>
   </body>
 </html>
