Adds  link to index.html file for site logo.

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a>
+      <a href="index.html">
         <img src="" alt="Лотип Седоны">
       </a>
       <nav class="navigation">
