Replaces a element instead button element.

--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,7 @@
             <span>Гостиница</span>
             <span>От 4000 ₽</span>
             <a class="button button-details" href="#">Подробнее</a>
-            <button class="button button-favourites">В избранное</button>
+            <a class="button button-favourites" href="#">В избранное</a>
             <span class="stars"></span>
             <span class="rating">Рейтинг: 8,5</span>
           </li>
@@ -138,7 +138,7 @@
             <span>Гостиница</span>
             <span>От 3000 ₽</span>
             <a class="button button-details" href="#">Подробнее</a>
-            <button class="button button-favourites">В избранное</button>
+            <a class="button button-favourites" href="#">В избранное</a>
             <span class="stars"></span>
             <span class="rating">Рейтинг: 8,9</span>
           </li>
@@ -150,7 +150,7 @@
             <span>Гостиница</span>
             <span>От 2000 ₽</span>
             <a class="button button-details" href="#">Подробнее</a>
-            <button class="button button-favourites">В избранном</button>
+            <a class="button button-favourites" href="#">В избранном</a>
             <span class="stars"></span>
             <span class="rating">Рейтинг: 9,2</span>
           </li>
@@ -162,7 +162,7 @@
             <span>Гостиница</span>
             <span>От 3000 ₽</span>
             <a class="button button-details" href="#">Подробнее</a>
-            <button class="button button-favourites">В избранное</button>
+            <a class="button button-favourites" href="#">В избранное</a>
             <span class="stars"></span>
             <span class="rating">Рейтинг: 9,2</span>
           </li>
