Adds links to the page switcher.

--- a/catalog.html
+++ b/catalog.html
@@ -169,12 +169,24 @@
         </ul>
         <div class="result-control-bottom">
           <ul class="pagination">
-            <li class="pagination-item">1</li>
-            <li class="pagination-item">2</li>
-            <li class="pagination-item">3</li>
-            <li class="pagination-item">4</li>
-            <li class="pagination-item">...</li>
-            <li class="pagination-item">10</li>
+            <li class="pagination-item">
+              <a>1</a>
+            </li>
+            <li class="pagination-item">
+              <a href="#">2</a>
+            </li>
+            <li class="pagination-item">
+              <a href="#">3</a>
+            </li>
+            <li class="pagination-item">
+              <a href="#">4</a>
+            </li>
+            <li class="pagination-item">
+              <a href="#">...</a>
+            </li>
+            <li class="pagination-item">
+              <a href="#">10</a>
+            </li>
           </ul>
           <form action="https://echo.htmlacademy.ru/" method="post">
             <label>
