Adds button for more result loading.

--- a/catalog.html
+++ b/catalog.html
@@ -168,6 +168,8 @@
           </li>
         </ul>
         <div class="result-control-bottom">
+          <div class="decorative-borders">
+            <a class="button button-more" href="#">Загрузить ещё</a>
           <ul class="pagination">
             <li class="pagination-item">
               <a>1</a>
