Adds content images to the pages.

--- a/hotels.html
+++ b/hotels.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a href="index.html">
-        <img src="" alt="Лотип Седоны">
+        <img src="images/logo/sedona-logo.svg" width="139" height="70" alt="Лотип Седоны">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -120,7 +120,7 @@
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="images/catalog/hotel-1.jpg" width="300" height="206" alt="Гостиница Amara Resort & Spa">
             </a>
             <h3 class="product-card-title">Amara Resort & Spa</h3>
             <span>Гостиница</span>
@@ -132,7 +132,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="images/catalog/hotel-2.jpg" width="300" height="206" alt="Гостиница Desert Quail Inn">
             </a>
             <h3 class="product-card-title">Desert Quail Inn</h3>
             <span>Гостиница</span>
@@ -144,7 +144,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="images/catalog/hotel-3.jpg" width="300" height="206" alt="Гостиница Villas at Poco Diablo">
             </a>
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
             <span>Гостиница</span>
@@ -156,7 +156,7 @@
           </li>
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="" alt="">
+              <img class="hotel-card-image" src="images/catalog/hotel-4.jpg" width="300" height="206" alt="Гостиница GreenTree Inn">
             </a>
             <h3 class="product-card-title">GreenTree Inn</h3>
             <span>Гостиница</span>
@@ -235,7 +235,7 @@
       <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 
       <a href="https://htmlacademy.ru/" title="Перейти на сайт htmlacademy.ru">
-          <img src="#" alt="Логотип HTMLAcademy">
+        <img src="images/logo/htmlacademy-logo.svg" width="115" height="34" alt="Логотип HTMLAcademy">
       </a>
     </footer>
   </body>
