--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header">
       <a>
-        <img src="" alt="Лотип Седоны">
+        <img src="images/logo/sedona-logo.svg" width="139" height="70" alt="Лотип Седоны">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -46,7 +46,7 @@
     <main class="main-index">
       <section class="banner">
         <h1 class="visually-hidden">Седона</h1>
-        <img src="" alt="Добро пожаловать в великолепную Седону">
+        <img src="images/welcome-text.png" width="458" height="352" alt="Добро пожаловать в великолепную Седону!">
       </section>
       <section class="intro">
         <h2 class="visually-hidden">Познакомьтесь с Седоной</h2>
@@ -63,7 +63,7 @@
               <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div class="reason-img">
-              <img src="" alt="Фотография улицы городка Седона">
+              <img src="images/photo/photo-1.jpg" width="800" height="384" alt="Фотография улицы городка Седона">
             </div>
             <ul>
               <li class="subreason icon-house">
@@ -82,7 +82,7 @@
           </li>
           <li class="reasons-list-item">
             <div class="reason-img">
-              <img src="" alt="Фотография скалы Мост Дьявола">
+              <img src="images/photo/photo-2.jpg" width="800" height="384" alt="Фотография скалы Мост Дьявола">
             </div>
             <div class="reason dark">
               <h2>Там есть мост дьявола</h2>
@@ -155,7 +155,7 @@
       <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 
       <a href="https://htmlacademy.ru/" title="Перейти на сайт htmlacademy.ru">
-          <img src="#" alt="Логотип HTMLAcademy">
+        <img src="images/logo/htmlacademy-logo.svg" width="115" height="34" alt="Логотип HTMLAcademy">
       </a>
     </footer>
   </body>
