Adds basic styling to the page.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link button button-brown button-search-header" href="#">
               Хочу сюда
             </a>
           </li>
@@ -59,7 +59,7 @@
         <ol class="reasons-list">
           <li class="reasons-list-item">
             <div class="reason dark">
-              <h2>Настоящий городок</h2>
+              <h3>Настоящий городок</h3>
               <p>&boxh; &numero;1 &boxh;</p>
               <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
@@ -86,28 +86,28 @@
               <img src="images/photo/photo-2.jpg" width="800" height="384" alt="Фотография скалы Мост Дьявола">
             </div>
             <div class="reason dark">
-              <h2>Там есть мост дьявола</h2>
+              <h3>Там есть мост дьявола</h3>
               <p>&boxh; &numero;2 &boxh;</p>
               <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
           </li>
           <li class="reasons-list-item">
             <div class="reason light">
-              <h2>Небольшая площадь</h2>
+              <h3>Небольшая площадь</h3>
               <p>&boxh; &numero;3 &boxh;</p>
               <p>Все достопримечательности находятся очень близко</p>
             </div>
           </li>
           <li class="reasons-list-item">
-            <div class="reason light">
-              <h2>Красивая дорога</h2>
+            <div class="reason light-dark">
+              <h3>Красивая дорога</h3>
               <p>&boxh; &numero;4 &boxh;</p>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </li>
           <li class="reasons-list-item">
             <div class="reason light">
-              <h2>Мало туристов</h2>
+              <h3>Мало туристов</h3>
               <p>&boxh; &numero;5 &boxh;</p>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
             </div>
@@ -118,9 +118,9 @@
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
         <p>Заинтересовались?</p>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="search-link" href="#">Поиск гостиницы в Седоне</a>
+        <a class="navigation-link button button-brown button-search-section" href="#">Поиск гостиницы в Седоне</a>
       </section>
-      <section class="subscription">
+      <section class="subscription-index">
         <h2 class="visually-hidden">Почтовая рассылка</h2>
         <p>Подпишитесь на рассылку</p>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -136,26 +136,26 @@
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="#">
+            <a class="button twitter-icon" href="#">
               <span class="visually-hidden" lang="en">Twitter</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="#">
+            <a class="button facebook-icon" href="#">
               <span class="visually-hidden" lang="en">Facebook</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="#">
+            <a class="button youtube-icon" href="#">
               <span class="visually-hidden" lang="en">Youtube</span>
             </a>
           </li>
         </ul>
       </section>
 
-      <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="navigation-link contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
 
-      <a href="https://htmlacademy.ru/" title="Перейти на сайт htmlacademy.ru">
+      <a class="navigation-link" href="https://htmlacademy.ru/" title="Перейти на сайт htmlacademy.ru">
         <img src="images/logo/htmlacademy-logo.svg" width="115" height="34" alt="Логотип HTMLAcademy">
       </a>
     </footer>
